--- a/services/ratings-api/package.json
+++ b/services/ratings-api/package.json
@@ -4,7 +4,9 @@
   "description": "API for book ratings",
   "main": "cmd/api/main.js",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@aws-sdk/client-dynamodb": "^3.450.0",
+    "@aws-sdk/lib-dynamodb": "^3.450.0"
   },
   "scripts": {
     "start": "node cmd/api/main.js"
