--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-fastapi
-uvicorn[standard]
-boto3
-aioredis==2.0.1
-pydantic
-numpy
-scipy
-python-dotenv
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+boto3==1.34.0
+redis==5.0.1
+pydantic==2.5.0
+pydantic-settings==2.1.0
+numpy==1.24.3
+scipy==1.11.4
+python-dotenv==1.0.0
